--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+  "node": "4.1.1",
+  "npm": "2.1.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
