--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "node": "4.1.1",
   "npm": "2.1.x"
   },
+  "scripts": {
+  "postinstall": "./node_modules/.bin/webpack"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
